--- a/index.html
+++ b/index.html
@@ -446,16 +446,16 @@
         constructor(canvas, playableHeight) {
             this.canvas = canvas;
             this.playableHeight = playableHeight;
-            this.width = 280 + Math.random() * 80;
+            this.width = 220 + Math.random() * 80;
             this.height = this.width * 0.35;
             this.x = this.canvas.width;
             this.y = this.playableHeight * 0.1 + Math.random() * (this.playableHeight * 0.15);
             this.vx = -2.5 - Math.random() * 0.5;
-            this.bannerLogo = 'ALLTHINGSFLYINGCARS.com';
+            this.bannerLogo = 'ATFCars Blimp'; // Placeholder text banner
             this.collisionDamage = BLIMP_COLLISION_DAMAGE;
             this.bannerWavePhase = Math.random() * Math.PI * 2;
             this.bannerWaveSpeed = 0.04 + Math.random() * 0.02;
-            this.bannerWaveAmplitude = 6 + Math.random() * 3;
+            this.bannerWaveAmplitude = 6 + Math.random() * 3; // Increased from 4-6 to 6-9
             this.windowPulsePhase = Math.random() * Math.PI * 2;
             this.windowPulseSpeed = 0.05 + Math.random() * 0.03;
             this.ribPhase = Math.random() * Math.PI * 2;
@@ -619,7 +619,7 @@
 
             // Banner (trailing to the right with wave effect)
             const bannerHeight = this.height * 0.3;
-            const bannerWidth = this.width * 0.9;
+            const bannerWidth = this.width * 0.7;
             const bannerAttachX = centerX + this.width * 0.45;
             const bannerAttachY = centerY;
             const bannerStartX = this.x + this.width + 20;
@@ -667,7 +667,7 @@
 
             const avgBannerY = this.y + this.height / 2;
             ctx.fillStyle = '#d9534f';
-            const fontSize = Math.max(8, Math.min(14, bannerHeight * 0.35));
+            const fontSize = Math.max(8, Math.min(16, bannerHeight * 0.35));
             ctx.font = `bold ${fontSize}px 'Courier New', Courier, monospace`;
             ctx.textAlign = 'center';
             ctx.textBaseline = 'middle';
@@ -1173,6 +1173,12 @@
                 proj.vy += PROJECTILE_GRAVITY; proj.rotation += proj.rotationSpeed;
                 if (proj.vy < 0 && proj.currentSize < proj.maxSize) { proj.currentSize += proj.growthRate; proj.size.w = proj.currentSize * (proj.type === 'CornCob' ? 0.6 : 1.0); proj.size.h = proj.currentSize * (proj.type === 'CornCob' ? 1.2 : 1.5); }
 
+                // Removed bounce from top of screen for ChickenLeg and CornCob
+                // if (proj.y < 0 && proj.vy < 0) {
+                //     proj.y = 0;
+                //     proj.vy *= -0.3;
+                // }
+
                 const groundLevel = playableHeight - proj.size.h;
                 if (proj.y >= groundLevel - 5) { if (Math.abs(proj.vy) < 0.5) { if (proj.stuckFrames !== undefined) { proj.stuckFrames++; }} else { proj.stuckFrames = 0; } if (proj.y >= groundLevel && proj.removeAfterFrames === -1) { proj.removeAfterFrames = 3; } proj.y = Math.min(proj.y, groundLevel); } else { proj.stuckFrames = 0; }
                 if (proj.removeAfterFrames !== undefined && proj.removeAfterFrames > 0) { proj.removeAfterFrames--;}
@@ -1211,35 +1217,14 @@
     function isColliding(rect1, rect2) { return rect1.x < rect2.x + rect2.width && rect1.x + rect1.width > rect2.x && rect1.y < rect2.y + rect2.height && rect1.y + rect1.height > rect2.y; }
     function handleCollision(obstacle) { if (carShake < 2) { battery -= COLLISION_BATTERY_COST; triggerShake(10); playCollisionSound(); updateBatteryUI(); currentScrollSpeed = Math.min(MAX_SCROLL_SPEED, currentScrollSpeed + SCROLL_SPEED_INCREMENT); currentMusicTempo = Math.min(MAX_MUSIC_TEMPO, currentMusicTempo + MUSIC_TEMPO_INCREMENT); playCollisionDissonance(); } }
     function handleBonusPickup(bonus) { if (bonus.type === 'Battery') { battery = Math.min(100, battery + BONUS_BATTERY_GAIN); playBatteryPickupSound(); } else if (bonus.type === 'ChargingTrigger') { playBonusFlourish(); } if (bonus.type === 'Battery') score += 50; updateBatteryUI(); updateScoreUI(); }
-    function drawGameBackground() { const gradient = ctx.createLinearGradient(0, 0, 0, playableHeight); gradient.addColorStop(0, '#0f0c29'); gradient.addColorStop(0.7, '#302b63'); gradient.addColorStop(1, '#24243e'); ctx.fillStyle = gradient; ctx.fillRect(0, 0, gameCanvas.width, playableHeight); ctx.fillStyle = 'rgba(255, 255, 255, 0.7)'; for(let i=0; i<60; i++) { let starX = (100 + i * 50 + frameCount * 0.15) % gameCanvas.width; let starY = (50 + i * 30) % playableHeight * 0.85; let size = 1 + Math.random() * 1.5; if (frameCount % (50 + i % 15) < 4) { ctx.fillRect(starX, starY, size*1.5, size*1.5); } else { ctx.fillRect(starX, starY, size, size); } } drawClouds(); drawSwarmBackground(); drawBuildings(); if (isChargingSequence && targetChargeStation) { ctx.fillStyle = '#444'; ctx.fillRect(targetChargeStation.x, targetChargeStation.y, targetChargeStation.width, 15); ctx.fillStyle = '#0ff'; ctx.fillRect(targetChargeStation.x + 5, targetChargeStation.y + 5, targetChargeStation.width - 10, 5); ctx.fillStyle = '#ff0'; ctx.fillRect(targetChargeStation.x + 15, targetChargeStation.y + 2, 10, 11); ctx.fillRect(targetChargeStation.x + targetChargeStation.width - 25, targetChargeStation.y + 2, 10, 11); } ctx.fillStyle = '#555'; ctx.fillRect(0, playableHeight, gameCanvas.width, SIDEWALK_HEIGHT); ctx.strokeStyle = '#888'; ctx.lineWidth = 2; ctx.beginPath(); ctx.moveTo(0, playableHeight + 1); ctx.lineTo(gameCanvas.width, playableHeight + 1); ctx.stroke(); }
+    function drawGameBackground() { const gradient = ctx.createLinearGradient(0, 0, 0, playableHeight); gradient.addColorStop(0, '#1a2a3a'); gradient.addColorStop(0.7, '#334455'); gradient.addColorStop(1, '#445566'); ctx.fillStyle = gradient; ctx.fillRect(0, 0, gameCanvas.width, playableHeight); ctx.fillStyle = 'rgba(255, 255, 255, 0.7)'; for(let i=0; i<60; i++) { let starX = (100 + i * 50 + frameCount * 0.15) % gameCanvas.width; let starY = (50 + i * 30) % playableHeight * 0.85; let size = 1 + Math.random() * 1.5; if (frameCount % (50 + i % 15) < 4) { ctx.fillRect(starX, starY, size*1.5, size*1.5); } else { ctx.fillRect(starX, starY, size, size); } } drawClouds(); drawSwarmBackground(); drawBuildings(); if (isChargingSequence && targetChargeStation) { ctx.fillStyle = '#444'; ctx.fillRect(targetChargeStation.x, targetChargeStation.y, targetChargeStation.width, 15); ctx.fillStyle = '#0ff'; ctx.fillRect(targetChargeStation.x + 5, targetChargeStation.y + 5, targetChargeStation.width - 10, 5); ctx.fillStyle = '#ff0'; ctx.fillRect(targetChargeStation.x + 15, targetChargeStation.y + 2, 10, 11); ctx.fillRect(targetChargeStation.x + targetChargeStation.width - 25, targetChargeStation.y + 2, 10, 11); } ctx.fillStyle = '#555'; ctx.fillRect(0, playableHeight, gameCanvas.width, SIDEWALK_HEIGHT); ctx.strokeStyle = '#888'; ctx.lineWidth = 2; ctx.beginPath(); ctx.moveTo(0, playableHeight + 1); ctx.lineTo(gameCanvas.width, playableHeight + 1); ctx.stroke(); }
     function drawCar() { let drawX = carX; let drawY = carY; if (carShake > 0) { drawX += (Math.random() - 0.5) * 8; drawY += (Math.random() - 0.5) * 8; carShake--; } const bodyWidth = CAR_WIDTH * 0.8; const bodyHeight = CAR_HEIGHT * 0.7; const bodyX = drawX + (CAR_WIDTH - bodyWidth) / 2; const bodyY = drawY + (CAR_HEIGHT - bodyHeight) / 2; const rotorSize = CAR_WIDTH * 0.3; const rotorOffsetY = bodyHeight * 0.3; ctx.fillStyle = carColor; ctx.fillRect(bodyX, bodyY, bodyWidth, bodyHeight); ctx.fillStyle = '#aaf'; ctx.fillRect(bodyX + bodyWidth * 0.5, bodyY + bodyHeight * 0.15, bodyWidth * 0.45, bodyHeight * 0.7); const rotorColor1 = '#ccc'; const rotorColor2 = '#999'; const rotorAnimSpeed = 0.3; const rotorColor = (Math.sin(frameCount * rotorAnimSpeed) > 0) ? rotorColor1 : rotorColor2; ctx.fillStyle = rotorColor; ctx.fillRect(drawX - rotorSize * 0.1, drawY - rotorOffsetY, rotorSize, rotorSize * 0.4); ctx.fillRect(drawX + CAR_WIDTH - rotorSize * 0.9, drawY - rotorOffsetY, rotorSize, rotorSize * 0.4); ctx.fillRect(drawX - rotorSize * 0.1, drawY + CAR_HEIGHT - rotorOffsetY, rotorSize, rotorSize * 0.4); ctx.fillRect(drawX + CAR_WIDTH - rotorSize * 0.9, drawY + CAR_HEIGHT - rotorOffsetY, rotorSize, rotorSize * 0.4); ctx.fillStyle = 'rgba(0, 255, 255, 0.2)'; ctx.fillRect(drawX, drawY + CAR_HEIGHT - 5, CAR_WIDTH, 5); }
     function spawnCloud() { const layer = Math.random(); const size = 60 + Math.random() * 120; clouds.push({ x: gameCanvas.width + size + Math.random() * 200, y: playableHeight * 0.05 + Math.random() * playableHeight * 0.5, size: size, opacity: 0.15 + layer * 0.3, speed: currentScrollSpeed * (0.2 + layer * 0.4), numPuffs: 3 + Math.floor(Math.random() * 3), puffOffsets: [] }); const cloud = clouds[clouds.length - 1]; for(let i = 0; i < cloud.numPuffs; i++) { cloud.puffOffsets.push({ x: (Math.random() - 0.5) * cloud.size * 0.7, y: (Math.random() - 0.5) * cloud.size * 0.25, radiusX: cloud.size * (0.25 + Math.random() * 0.2), radiusY: cloud.size * (0.15 + Math.random() * 0.15) }); } }
     function updateClouds() { for (let i = clouds.length - 1; i >= 0; i--) { const cloud = clouds[i]; cloud.x -= cloud.speed; if (cloud.x + cloud.size < 0) { clouds.splice(i, 1); } } if (clouds.length < 8 && Math.random() < 0.02) { spawnCloud(); } }
     function drawClouds() { clouds.forEach(cloud => { ctx.fillStyle = `rgba(200, 200, 220, ${cloud.opacity})`; cloud.puffOffsets.forEach(puff => { ctx.beginPath(); ctx.ellipse(cloud.x + puff.x, cloud.y + puff.y, puff.radiusX, puff.radiusY, 0, 0, Math.PI * 2); ctx.fill(); }); }); }
     function spawnSwarmVehicle() { const layer = Math.random(); const size = 5 + layer * 15; swarmVehicles.push({ x: Math.random() * gameCanvas.width, y: Math.random() * playableHeight * 0.9, sizeW: size * (1.5 + Math.random() * 0.5), sizeH: size, speed: currentScrollSpeed * (0.1 + layer * 0.3), color: `hsl(${180 + Math.random() * 60}, 70%, ${30 + layer * 40}%)`, bobPhase: Math.random() * Math.PI * 2, bobSpeed: 0.01 + Math.random() * 0.02, bobAmplitude: 2 + layer * 5 }); }
     function updateSwarmVehicles() { for (let i = swarmVehicles.length - 1; i >= 0; i--) { const v = swarmVehicles[i]; v.x -= v.speed; v.bobPhase += v.bobSpeed; v.y += Math.sin(v.bobPhase) * v.bobAmplitude * 0.1; if (v.x + v.sizeW < 0) { v.x = gameCanvas.width + v.sizeW + Math.random() * 100; v.y = Math.random() * playableHeight * 0.9; v.bobPhase = Math.random() * Math.PI * 2; } } if (swarmVehicles.length < 30 && Math.random() < 0.05) { spawnSwarmVehicle(); } }
-    function drawSwarmBackground() {
-        swarmVehicles.forEach(v => {
-            const bodyY = v.y + Math.sin(v.bobPhase) * v.bobAmplitude;
-            const x = v.x;
-            const w = v.sizeW;
-            const h = v.sizeH;
-
-            // Main chassis
-            ctx.fillStyle = v.color;
-            ctx.fillRect(x, bodyY, w, h);
-
-            // Cockpit
-            ctx.fillStyle = 'rgba(173, 216, 230, 0.6)'; // Light blue glass
-            ctx.fillRect(x + w * 0.6, bodyY, w * 0.35, h);
-
-            // Tail light
-            ctx.fillStyle = 'rgba(255, 0, 0, 0.7)';
-            ctx.beginPath();
-            ctx.arc(x, bodyY + h / 2, h * 0.4, 0, Math.PI * 2);
-            ctx.fill();
-        });
-    }
+    function drawSwarmBackground() { swarmVehicles.forEach(v => { ctx.fillStyle = v.color; const bodyY = v.y + Math.sin(v.bobPhase) * v.bobAmplitude; ctx.fillRect(v.x, bodyY, v.sizeW, v.sizeH * 0.6); ctx.fillRect(v.x - v.sizeW * 0.1, bodyY - v.sizeH * 0.2, v.sizeW * 0.3, v.sizeH * 0.3); ctx.fillRect(v.x + v.sizeW * 0.8, bodyY - v.sizeH * 0.2, v.sizeW * 0.3, v.sizeH * 0.3); ctx.fillStyle = `rgba(200, 220, 255, 0.1)`; ctx.fillRect(v.x - v.sizeW * 0.1, bodyY - v.sizeH * 0.1, v.sizeW * 1.2, v.sizeH * 0.8); }); }
     function findChargingStationSpot(triggerX) { let bestSpot = null; let maxGap = 0; for (let i = 0; i < buildings.length - 1; i++) { const b1 = buildings[i]; const b2 = buildings[i+1]; const gapStart = b1.x + b1.width; const gapEnd = b2.x; const gapWidth = gapEnd - gapStart; if (gapWidth > CAR_WIDTH + 40 && gapStart < triggerX + 100 && gapEnd > triggerX - 100) { if (gapWidth > maxGap) { maxGap = gapWidth; bestSpot = { x: gapStart + (gapWidth / 2) - 40, y: playableHeight - 10, width: 80 }; } } } if (!bestSpot) { bestSpot = { x: carX, y: gameCanvas.height + 50, width: 80 }; console.warn("No suitable gap found!"); } return bestSpot; }
 
     function startChargingSequence(trigger) {
@@ -1591,31 +1576,7 @@
         }
     });
 
-    function verifyDOMElements() {
-        const elementIds = [
-            'gameCanvas', 'start-screen', 'startButton', 'ui-overlay', 'battery-level',
-            'score-label', 'game-over-screen', 'final-score', 'replayButton',
-            'mobile-controls-left', 'mobile-controls-right', 'touch-up', 'touch-down',
-            'touch-left', 'touch-right', 'branding-watermark', 'game-over-branding'
-        ];
-        const missing = [];
-        console.log("🔍 Running UI Self-Check...");
-
-        elementIds.forEach(id => {
-            if (!document.getElementById(id)) {
-                missing.push(id);
-            }
-        });
-
-        if (missing.length > 0) {
-            console.error("❌ UI Self-Check FAILED. Missing elements:", missing);
-        } else {
-            console.log("✅ UI Self-Check PASSED. All required DOM elements are present.");
-        }
-    }
-
     document.addEventListener('DOMContentLoaded', () => {
-        verifyDOMElements();
         resizeGame(); updateBatteryUI(); updateScoreUI();
         for(let i=0; i<20; i++) spawnSwarmVehicle();
         let initialSwarmLoopId = null;
@@ -1637,3 +1598,4 @@
 
 </body>
 </html>
+```
