--- a/index.html
+++ b/index.html
@@ -145,19 +145,35 @@
        font-family: monospace;
      }
 
-    .vertiport-icon {
+    /* Recharge Zone Pillar Icon Replacement */
+    .vertiport-pillar-icon {
       display: inline-flex;
+      flex-direction: column;
+      margin-right: 8px;
+      justify-content: center;
       align-items: center;
-      margin-right: 6px;
     }
-    .vertiport-icon .bar {
-      display: inline-block;
-      width: 3px;
-      height: 14px;
-      background: white;
-      margin: 0 2px;
-      opacity: 0.7;
-      box-shadow: 0 0 4px white;
+
+    .pillar-line {
+      width: 14px;
+      height: 3px;
+      margin: 1px 0;
+      border-radius: 1px;
+    }
+
+    .pillar-line.light {
+      background-color: #666;
+      opacity: 0.6;
+    }
+
+    .pillar-line.mid {
+      background-color: #999;
+      opacity: 0.8;
+    }
+
+    .pillar-line.bright {
+      background-color: #fff;
+      opacity: 1;
     }
 
     #startButton {
@@ -358,7 +374,15 @@
 <h3>🟩 What to Grab:</h3>
 <ul style="text-align:left; padding-left: 0;">
 <li><span class="battery-icon">+</span>Floating batteries to recharge</li>
-<li><span class="vertiport-icon"><span class="bar"></span><span class="bar"></span></span>Enter recharge zones (auto land and refuel)</li>
+<!-- Recharge Zone Pillar Icon Replacement -->
+<li>
+  <span class="vertiport-pillar-icon">
+    <span class="pillar-line light"></span>
+    <span class="pillar-line mid"></span>
+    <span class="pillar-line bright"></span>
+  </span>
+  Enter recharge zones (auto land and refuel)
+</li>
 </ul>
 <h3>🕹️ Controls:</h3>
 <ul style="text-align:left; padding-left: 0;">
