--- a/index.html
+++ b/index.html
@@ -145,19 +145,18 @@
        font-family: monospace;
      }
 
-    /* Recharge Zone Pillar Icon Replacement */
+    /* Vertiport Recharge Pillar Fix */
     .vertiport-pillar-icon {
-      display: inline-flex;
-      flex-direction: column;
-      margin-right: 8px;
-      justify-content: center;
-      align-items: center;
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 6px;
     }
 
     .pillar-line {
-      width: 14px;
-      height: 3px;
-      margin: 1px 0;
+      display: block;
+      width: 12px;
+      height: 4px;
+      margin: 1px auto;
       border-radius: 1px;
     }
 
@@ -167,7 +166,7 @@
     }
 
     .pillar-line.mid {
-      background-color: #999;
+      background-color: #aaa;
       opacity: 0.8;
     }
 
