--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
         background: rgba(255,255,255,0.1);
     }
 
+    .menu-icon {
+      width: 18px;
+      height: auto;
+      vertical-align: middle;
+      margin-right: 6px;
+    }
+
     /* Battery Icon Menu Patch */
     .battery-icon {
        display: inline-block;
@@ -145,18 +152,18 @@
        font-family: monospace;
      }
 
-    /* Vertiport Pillar Glow Fix */
+    /* Vertiport Recharge Pillar Fix */
     .vertiport-pillar-icon {
       display: inline-block;
+      vertical-align: middle;
       margin-right: 6px;
       line-height: 1;
-      vertical-align: middle;
     }
 
     .pillar-line {
       display: block;
-      width: 14px;
-      height: 3px;
+      width: 12px;
+      height: 4px;
       margin: 2px auto;
       border-radius: 2px;
       box-shadow: 0 0 3px #fff;
@@ -360,9 +367,9 @@
 <li>🎈 Balloons rising from the streets</li>
 </ul>
 <li>💥 Hitting anything drains your battery.</li>
-<li>🟥 If your battery hits zero, it’s game over.</li>
+<li><img src="X_BASE64_HERE" alt="X" class="menu-icon"> If your battery hits zero, it’s game over.</li>
 </ul>
-<h3>🟩 What to Grab:</h3>
+<h3><img src="CHECK_BASE64_HERE" alt="✓" class="menu-icon"> What to Grab:</h3>
 <ul style="text-align:left; padding-left: 0;">
 <li><span class="battery-icon">+</span>Floating batteries to recharge</li>
 <!-- Recharge Zone Pillar Icon Replacement -->
