--- a/index.html
+++ b/index.html
@@ -162,24 +162,26 @@
     .green-check::before {
       content: '';
       position: absolute;
-      width: 10px;
+      width: 8px;
       height: 3px;
       background-color: #39ff14;
-      transform: rotate(-45deg);
-      top: 60%;
-      left: 15%;
+      top: 55%;
+      left: 5%;
+      transform: rotate(45deg);
       border-radius: 2px;
+      box-shadow: 0 0 2px #39ff14;
     }
     .green-check::after {
       content: '';
       position: absolute;
-      width: 5px;
+      width: 14px;
       height: 3px;
       background-color: #39ff14;
-      transform: rotate(45deg);
-      top: 66%;
-      left: 40%;
+      top: 45%;
+      left: 20%;
+      transform: rotate(-45deg);
       border-radius: 2px;
+      box-shadow: 0 0 2px #39ff14;
     }
 
     /* Battery Icon Menu Patch */
