--- a/index.html
+++ b/index.html
@@ -417,9 +417,9 @@
 <li>💥 Hitting anything drains your battery.</li>
 <li><span class="menu-icon red-x"></span> If your battery hits zero, it’s game over.</li>
 </ul>
-<h3><span class="menu-icon green-check"></span> What to Grab:</h3>
+<h3>What to Grab:</h3>
 <ul style="text-align:left; padding-left: 0;">
-<li><span class="battery-icon">+</span>Floating batteries to recharge</li>
+<li><span class="menu-icon green-check"></span> Floating batteries to recharge</li>
 <!-- Recharge Zone Pillar Icon Replacement -->
 <li>
   <span class="vertiport-pillar-icon">
